<resources>
    <!-- CREDENCIALES APLICATIVO -->
    <string name="app_name">Dice</string>
    <string name="developer">ProjectGame</string>
    <string name="desarrollo">Developed by:</string>

    <!-- LOGIN -->
    <string name="titulo_login">Log in</string>
    <string name="lbl_usuario">User</string>
    <string name="lbl_contraseña">Password</string>
    <string name="txt_contraseña">Password</string>
    <string name="btn_ingresar">Sign in</string>
    <string name="btn_crear_cuenta">Create account</string>
    <string name="coins_label">Coins: 30</string>
    <string name="lbl_olvidaste_contraseña">Forgot your password?</string>
    <string name="btn_olvidaste_contraseña">Recover</string>
    <string name="btn_start">START</string>

    <!-- THIRDPAG-->
    <string name="btn_inicioJuego">Start game</string>
    <string name="btn_historico">Historical data</string>
    <string name="btn_user">User information</string>
    <string name="btn_config">Settings</string>
    <string name="btn_pool_position">Pool position</string>

    <!-- SECONDPAG -->
    <string name="sp_user_unknown">User unknown</string>
    <string name="sp_error_query">Error executing query</string>

    <!-- SECONDPAG_FIREBASE-->
    <string name="spn_msg_login">Log in to Google to access the game</string>
    <string name="spn_msg_welcome">Welcome: </string>"

    <!-- REGISTRO -->
    <string name="hint_nuevo_usuario">New user</string>
    <string name="hint_nueva_contraseña">New password</string>
    <string name="hint_confirmar_contraseña">Set password</string>
    <string name="btn_registrar">Sign up</string>
    <string name="btn_regresar">Return</string>

    <!-- JUEGO -->
    <string name="lbl_monedas">Coins: </string>
    <string name="btn_recargar">Reload coins</string>
    <string name="dice_description">Dice</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_10">10</string>
    <string name="number_11">11</string>
    <string name="number_12">12</string>
    <string name="dice_result">Results: </string>
    <string name="roll_dice">Roll dice</string>
    <string name="toggle_music">Turn music on or off</string>
    <string name="image_description">Game Background</string>
    <string name="settings">Settings</string>
    <string name="capture_screenshot">Capture Screen</string>
    <string name="number_9">9</string>
    <string name="help_button_description">Help button</string>
    <string name="version">Version 1.0.0</string>
    <string name="txt_usuario">User</string>
    <string name="lbl_crear_cuenta">Dont have an account? Create One</string>
    <string name="lbl_registrarse">Sign in</string>
    <string name="btn_results">Results</string>

    <!-- BASE DE DATOS HELPER -->
    <string name="db_location_saved">Location saved: Latitude=%1$s, Longitude=%2$s, User=%3$s</string>
    <string name="db_locacion_sav">Location saved: </string>
    <string name="db_score_not_found">The column score does not exist in the cursor.</string>
    <string name="db_user_not_found">User not found, initial score set to 30.</string>
    <string name="db_users_not_found">Users not found.</string>
    <string name="db_user_created">User created successfully: </string>
    <string name="db_user_not_created">Error creating user.</string>
    <string name="db_score">Score: </string>
    <string name="db_columns_found">One or more columns do not exist in the cursor.</string>
    <string name="db_no_users">There are no users in the database.</string>
    <string name="db_error">Error saving location.</string>
    <string name="db_name">Name: </string>
    <string name="db_error_verify">Error verifying user.</string>
    <string name="db_score_updated">Score updated successfully for: </string>"
    <string name="db_score_not_updated">Error updating score.</string>
    <string name="db_score_error">Error getting score.</string>
    <string name="db_user_error">Error getting user.</string>
    <string name="db_user">User: </string>"

    <!-- CREAR CUENTA -->
    <string name="cc_new_user">User registered successfully</string>
    <string name="cc_error_register">Error registering user</string>
    <string name="cc_access">Please enter a username and password</string>

    <!-- GAMEPAG -->
    <string name="gp_first_bet">You must first place a bet</string>
    <string name="gp_no_coins">You dont have enough coins to place a bet</string>
    <string name="gp_coins">Coins: </string>
    <string name="gp_recharged">Have been recharged </string>
    <string name="gp_storage_denied">Storage permission denied</string>
    <string name="gp_calendar_granted">Calendar permission granted</string>
    <string name="gp_calendar_denied">Calendar permission denied</string>
    <string name="gp_screenshot_saved">Screenshot saved in gallery</string>
    <string name="gp_screenshot_sav">Screenshot saved in: </string>
    <string name="gp_victory_saved_calendar">Victory saved in Google Calendar</string>
    <string name="gp_event_created_URI">Event created with URI: </string>
    <string name="gp_error_saving_calendar">Error saving to Google Calendar</string>
    <string name="gp_error_saving_screenshot">Error saving screenshot: </string>
    <string name="gp_error_insertion">Error: Event insertion failed</string>
    <string name="gp_error_saving_event">Error occurred while saving the event</string>
    <string name="gp_error_exception">Exception: </string>
    <string name="gp_error_clendar_ID">Error getting calendar ID: </string>
    <string name="gp_error_score">Error getting Score </string>
    <string name="gp_error_score_update">Error updating Score</string>
    <string name="gp_score_update">Score updated successfully</string>
    <string name="gp_calendar_no_available">Calendar not available</string>
    <string name="gp_calendar_failed_load">Failed to load calendar</string>
    <string name="gp_results">Results: </string>
    <string name="gp_won">You have won!</string>
    <string name="gp_victory">Victory!</string>
    <string name="gp_lost">You have lost! Try again</string>
    <string name="gp_recharged_coins"> coins</string>
    <string name="gp_calendar_select">Select calendar:</string>
    <string name="help_dialog_title">Help</string>
    <string name="help_dialog_message">Here are the rules of the game:  1. Choose a number from the betting panel (2-12). 2. Roll the dice. 3. If the result matches your bet, you win. 4. Keep playing and collect coins.</string>
    <string name="ok">Ok</string>
    <string name="gp_player">Player: </string>
    <string name="gp_victories">Victories: </string>
    <string name="gp_top_10_nt_found">Top 10 not found</string>
    <string name="gp_error_gettin10">Error getting top 10 </string>
    <string name="gp_sound">Sound loading successful</string>
    <string name="gp_error_sound">Error loading sound</string>
    <string name="gp_premio_incrementado">Prize incrised by 50e</string>
    <string name="gp_error_incrementando">Error increasing prize</string>
    <string name="gp_error_prize">Error getting prize</string>
    <string name="gp_win_prize">You have won the prize $</string>"
    <string name="gp_prize_reset">Prize reset to $0</string>"
    <string name="gp_error_prize_reset">Error resetting prize</string>






    <!-- HISTORICALPAG -->
    <string name="hp_name">Name: </string>
    <string name="hp_score">Score: </string>
    <string name="hp_no_data">No game data available</string>
    <string name="puntuacion_label">Score: %1$d</string>
    <string name="hp_party_data">There is no starting data.</string>



    <!-- USERDATAPAG -->
    <string name="udp_not_location">No location available</string>
    <string name="udp_latitude">Latitude: </string>
    <string name="udp_longitude">Longitude: </string>
    <string name="udp_precision">Precision: </string>
    <string name="udp_altitud">Altitude: </string>
    <string name="udp_distance"> meters</string>
    <string name="udp_not_permision">Location permission denied</string>
    <string name="udp_UserName">Nombre de Usuario: </string>
    <string name="udp_UserNameError">Error al obtener el nombre de usuario</string>
    <string name="udp_UserPassword">Contraseña: </string>
    <string name="udp_UserPasswordError">Error al obtener la contraseña</string>
    <string name="udp_altitude">Altitud: </string>
    <string name="udp_TitleUserInfo">User Information</string>
    <string name="udp_TitleUserLocation">Location Information</string>
    <string name="udp_GetLocation">Get Location</string>

    <!-- USERSPOSITIONS -->
    <string name="ups_label_prize">JACKPOT</string>
    <string name="ups_label_pool_position">Pool Position</string>

    <!-- USERREPOSITORY -->
    <string name="ur_error_user_creation">Error creating user</string>
    <string name="default_web_client_id">270631014169-jeg307malo2000h5ms01acoev1fj4dog.apps.googleusercontent.com</string>
</resources>
