<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Título -->

    <!-- Información de ubicación -->

    <!-- Botón para obtener ubicación -->

    <!-- Botón para regresar -->

    <TextView
        android:id="@+id/locationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/udp_TitleUserLocation"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/infoLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@android:color/darker_gray"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationTitle">

        <TextView
            android:id="@+id/latitudText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/udp_latitude"
            android:textColor="#263238"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/longitudText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/udp_longitude"
            android:textColor="#263238"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/precisionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/udp_precision"
            android:textColor="#263238"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/altitudText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/udp_altitude"
            android:textColor="#263238"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnObtenerUbicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/udp_GetLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoLinearLayout" />

    <Button
        android:id="@+id/buttonVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:text="@string/btn_regresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnObtenerUbicacion" />

</androidx.constraintlayout.widget.ConstraintLayout>

